--- a/styles/AudioPlayer.module.css
+++ b/styles/AudioPlayer.module.css
@@ -319,6 +319,10 @@
     width: 70px;
     font-size: 70px;
   }
+
+  .play::-webkit-slider-thumb {
+    font-size: 200px;
+  }
 }
 
 @media screen and (max-width: 540px) {
@@ -368,6 +372,10 @@
     height: 65px;
     width: 65px;
     font-size: 65px;
+  }
+
+  .play::-webkit-slider-thumb {
+    font-size: 200px;
   }
 }
 
@@ -422,6 +430,10 @@
     width: 60px;
     font-size: 26px;
   }
+
+  .play::-webkit-slider-thumb {
+    font-size: 200px;
+  }
 }
 
 /* Galaxy fold === 280px width */
@@ -469,5 +481,9 @@
     height: 55px;
     width: 55px;
     font-size: 24px;
+  }
+
+  .play::-webkit-slider-thumb {
+    font-size: 200px;
   }
 }
