--- a/styles/AudioPlayer.module.css
+++ b/styles/AudioPlayer.module.css
@@ -300,6 +300,8 @@
 
   .timeControls {
     font-size: 28px;
+    margin: 0;
+    padding: 2px;
   }
 
   .heart {
@@ -309,19 +311,8 @@
   .playPause {
     width: 70px;
     height: 70px;
-    font-size: 30px;
-  }
-
-  /* Make the play button bigger in safari */
-
-  .playPause::-webkit-slider-thumb {
-    height: 70px;
-    width: 70px;
-    font-size: 70px;
-  }
-
-  .play::-webkit-slider-thumb {
-    font-size: 200px;
+    font-size: 60px;
+    /* font-size: 30px; */
   }
 }
 
@@ -350,6 +341,8 @@
 
   .timeControls {
     font-size: 26px;
+    margin: 0;
+    padding: 2px;
   }
 
   .controls {
@@ -363,19 +356,8 @@
   .playPause {
     width: 65px;
     height: 65px;
-    font-size: 28px;
-  }
-
-  /* Make the play button bigger in safari */
-
-  .playPause::-webkit-slider-thumb {
-    height: 65px;
-    width: 65px;
-    font-size: 65px;
-  }
-
-  .play::-webkit-slider-thumb {
-    font-size: 200px;
+    font-size: 55px;
+    /* font-size: 28px; */
   }
 }
 
@@ -411,6 +393,7 @@
   .timeControls {
     font-size: 24px;
     margin: 0;
+    padding: 2px;
   }
 
   .heart {
@@ -420,19 +403,8 @@
   .playPause {
     width: 60px;
     height: 60px;
-    font-size: 26px;
-  }
-
-  /* Make the play button bigger in safari */
-
-  .playPause::-webkit-slider-thumb {
-    height: 60px;
-    width: 60px;
-    font-size: 26px;
-  }
-
-  .play::-webkit-slider-thumb {
-    font-size: 200px;
+    font-size: 50px;
+    /* font-size: 26px; */
   }
 }
 
@@ -473,17 +445,5 @@
     width: 55px;
     height: 55px;
     font-size: 24px;
-  }
-
-  /* Make the play button bigger in safari */
-
-  .playPause::-webkit-slider-thumb {
-    height: 55px;
-    width: 55px;
-    font-size: 24px;
-  }
-
-  .play::-webkit-slider-thumb {
-    font-size: 200px;
   }
 }
