--- a/styles/AudioPlayer.module.css
+++ b/styles/AudioPlayer.module.css
@@ -64,14 +64,8 @@
   justify-content: center;
 }
 
-.timeControls {
-  background: none;
-  border: none;
-  font-size: 30px;
-  cursor: pointer;
-  color: white;
-}
-
+.timeControls,
+.AdditionalControls,
 .heart {
   background: none;
   border: none;
@@ -309,15 +303,15 @@
   .playPause {
     width: 70px;
     height: 70px;
-    /* font-size: 30px; */
+    font-size: 30px;
   }
 
-  .play {
+  /* .play {
     height: 30px;
     width: 30px;
     min-height: 30px;
     z-index: 3;
-  }
+  } */
 }
 
 @media screen and (max-width: 540px) {
@@ -346,7 +340,7 @@
   .timeControls {
     font-size: 26px;
     margin: 0;
-    padding: 3px;
+    padding: 5px;
   }
 
   .controls {
@@ -360,15 +354,15 @@
   .playPause {
     width: 65px;
     height: 65px;
-    font-size: 40px;
+    font-size: 28px;
   }
 
-  .play {
+  /* .play {
     height: 28px;
     width: 28px;
     min-height: 28px;
     z-index: 10;
-  }
+  } */
 }
 
 /* xs */
@@ -412,15 +406,15 @@
   .playPause {
     width: 60px;
     height: 60px;
-    /* font-size: 26px; */
+    font-size: 26px;
   }
 
-  .play {
+  /* .play {
     height: 26px;
     width: 26px;
     min-height: 26px;
     z-index: 10;
-  }
+  } */
 }
 
 /* Galaxy fold === 280px width */
@@ -459,13 +453,13 @@
   .playPause {
     width: 55px;
     height: 55px;
-    /* font-size: 24px; */
+    font-size: 24px;
   }
 
-  .play {
+  /* .play {
     height: 24px;
     width: 24px;
     min-height: 24px;
     z-index: 10;
-  }
+  } */
 }
