fixing the play in safari phones part 8

--- a/styles/AudioPlayer.module.css
+++ b/styles/AudioPlayer.module.css
@@ -300,12 +300,12 @@
     font-size: 28px;
   }
 
-  .playPause {
+  /* .playPause {
     width: 70px;
     height: 70px;
     font-size: 200px;
-    /* font-size: 2.1rem; */
-  }
+    font-size: 2.1rem;
+  } */
 
   /* .play {
     height: 30px;
@@ -352,12 +352,12 @@
     font-size: 26px;
   }
 
-  .playPause {
+  /* .playPause {
     width: 65px;
     height: 65px;
     font-size: 200px;
-    /* font-size: 1.9rem; */
-  }
+    font-size: 1.9rem;
+  } */
 
   /* .play {
     height: 28px;
@@ -405,12 +405,12 @@
     font-size: 24px;
   }
 
-  .playPause {
+  /* .playPause {
     width: 60px;
     height: 60px;
     font-size: 200px;
-    /* font-size: 1.8rem; */
-  }
+    font-size: 1.8rem;
+  } */
 
   /* .play {
     height: 26px;
@@ -453,12 +453,12 @@
     font-size: 22px;
   }
 
-  .playPause {
+  /* .playPause {
     width: 55px;
     height: 55px;
     font-size: 200px;
-    /* font-size: 24px; */
-  }
+    font-size: 24px;
+  } */
 
   /* .play {
     height: 24px;
