--- a/styles/AudioPlayer.module.css
+++ b/styles/AudioPlayer.module.css
@@ -352,12 +352,10 @@
     font-size: 26px;
   }
 
-  /* .playPause {
+  .playPause {
     width: 65px;
     height: 65px;
-    font-size: 200px;
-    font-size: 1.9rem;
-  } */
+  }
 
   /* .play {
     height: 28px;
@@ -453,12 +451,12 @@
     font-size: 22px;
   }
 
-  /* .playPause {
+  .playPause {
     width: 55px;
     height: 55px;
     font-size: 200px;
     font-size: 24px;
-  } */
+  }
 
   /* .play {
     height: 24px;
