--- a/styles/AudioPlayer.module.css
+++ b/styles/AudioPlayer.module.css
@@ -146,6 +146,7 @@
   outline: none;
   cursor: pointer;
   margin: 0 12px;
+  z-index: 2;
 }
 
 /* proggress bar --safari  => Good */
@@ -279,6 +280,7 @@
   justify-content: center;
   position: relative;
   width: 120px;
+  height: 180px;
 }
 
 .background {
