--- a/styles/AudioPlayer.module.css
+++ b/styles/AudioPlayer.module.css
@@ -694,7 +694,13 @@
   .timeControls {
     font-size: 26px;
     margin: 0;
-    padding: 0.5rem;
+    padding: 0 0.5rem;
+  }
+
+  .AdditionalControls {
+    font-size: 26px;
+    margin: 0;
+    padding: 0 0.5rem;
   }
 
   /* .controls {
