--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,8 +22,8 @@ body {
   /* Test */
   background-image: radial-gradient(
     circle 602px at 2.1% 5.1%,
-    rgba(10, 10, 10, 0.527) 0%,
-    rgba(0, 0, 0, 1) 90.1%
+    rgba(60, 51, 110, 0.527) 0%,
+    rgb(0, 0, 0) 90.1%
   );
 }
 
