--- a/styles/AudioPlayer.module.css
+++ b/styles/AudioPlayer.module.css
@@ -27,6 +27,12 @@
   height: 230px;
   width: 230px;
   margin-bottom: 10px;
+  -webkit-touch-callout: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+  cursor: default;
 }
 
 .songInfo {
