--- a/styles/AudioPlayer.module.css
+++ b/styles/AudioPlayer.module.css
@@ -13,6 +13,27 @@
   padding: 0 2rem;
 }
 
+@keyframes animateHeart {
+  0% {
+    transform: scale(1.2);
+  }
+  5% {
+    transform: scale(1.1);
+  }
+  10% {
+    transform: scale(1);
+  }
+  15% {
+    transform: scale(1.3);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1.1);
+  }
+}
+
 .imgContainer {
   align-items: center;
   display: flex;
@@ -83,12 +104,50 @@
   z-index: 3;
 }
 
+.prevOffset {
+  background: none;
+  border: none;
+  font-size: 30px;
+  cursor: pointer;
+  color: gray;
+  z-index: 3;
+}
+
+.RepeatOff {
+  background: none;
+  border: none;
+  font-size: 26px;
+  cursor: pointer;
+  color: gray;
+  z-index: 3;
+}
+
+.shuffleOff {
+  background: none;
+  border: none;
+  font-size: 26px;
+  cursor: pointer;
+  color: gray;
+  z-index: 3;
+}
+
 .heart:hover {
   color: red;
+  position: relative;
+  animation: animateHeart 1.2s infinite;
+}
+
+.ActiveShuffle {
+  color: blue;
 }
 
 .timeControls:hover {
   color: blue;
+  transform: scale(1.2);
+}
+
+.AdditionalControls:hover {
+  transform: scale(1.2);
 }
 
 .playPause {
@@ -326,6 +385,7 @@
   padding: 0;
   margin: 0;
 }
+
 .left {
   clip-path: polygon(
     43.77666% 55.85251%,
