--- a/styles/SongCards.module.css
+++ b/styles/SongCards.module.css
@@ -84,6 +84,19 @@
   margin: 0;
 }
 
+/* .PlayBtnCards {
+  color: #ffffff;
+  position: absolute;
+  right: 50px;
+  top: 700px;
+  outline: none;
+  font-size: 80px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  z-index: 1;
+} */
+
 /* .controlls {
   margin: 10px 0;
 }
