changing the Bgs

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,11 +20,11 @@ body {
   ); */
 
   /* Test */
-  background-image: radial-gradient(
+  /* background-image: radial-gradient(
     circle 602px at 2.1% 5.1%,
     rgba(221, 151, 20, 0.911) 0%,
     rgba(0, 0, 0, 1) 90.1%
-  );
+  ); */
   scroll-behavior: smooth;
 }
 
